--- a/YoakkeCompiler/YoakkeCompiler.vcxproj
+++ b/YoakkeCompiler/YoakkeCompiler.vcxproj
@@ -111,21 +111,22 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="main.cpp" />
-    <ClCompile Include="src\AST.cpp" />
-    <ClCompile Include="src\Expr.cpp" />
-    <ClCompile Include="src\Lexer.cpp" />
-    <ClCompile Include="src\Parser.cpp" />
-    <ClCompile Include="src\Stmt.cpp" />
+    <ClCompile Include="src\AST\Expr.cpp" />
+    <ClCompile Include="src\AST\FuncPrototype.cpp" />
+    <ClCompile Include="src\AST\Stmt.cpp" />
+    <ClCompile Include="src\AST\TypeDesc.cpp" />
+    <ClCompile Include="src\Parsing\Lexer.cpp" />
+    <ClCompile Include="src\Parsing\Parser.cpp" />
+    <ClCompile Include="src\Parsing\Token.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\AST.h" />
-    <ClInclude Include="src\Expr.h" />
-    <ClInclude Include="src\Lexer.h" />
-    <ClInclude Include="src\Operator.h" />
-    <ClInclude Include="src\Parser.h" />
-    <ClInclude Include="src\Stmt.h" />
-    <ClInclude Include="src\Token.h" />
-    <ClInclude Include="src\TypeDesc.h" />
+    <ClInclude Include="src\AST\Expr.h" />
+    <ClInclude Include="src\AST\FuncPrototype.h" />
+    <ClInclude Include="src\AST\Stmt.h" />
+    <ClInclude Include="src\AST\TypeDesc.h" />
+    <ClInclude Include="src\Parsing\Lexer.h" />
+    <ClInclude Include="src\Parsing\Parser.h" />
+    <ClInclude Include="src\Parsing\Token.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
