--- a/YoakkeCompiler/YoakkeCompiler.vcxproj.filters
+++ b/YoakkeCompiler/YoakkeCompiler.vcxproj.filters
@@ -65,5 +65,8 @@
     <ClInclude Include="src\Parsing\OperDesc.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Parsing\ParseState.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
