--- a/YoakkeCompiler/YoakkeCompiler.vcxproj
+++ b/YoakkeCompiler/YoakkeCompiler.vcxproj
@@ -115,6 +115,7 @@
     <ClCompile Include="src\AST\FuncPrototype.cpp" />
     <ClCompile Include="src\AST\Stmt.cpp" />
     <ClCompile Include="src\AST\TypeDesc.cpp" />
+    <ClCompile Include="src\Parsing\ExprParser.cpp" />
     <ClCompile Include="src\Parsing\Lexer.cpp" />
     <ClCompile Include="src\Parsing\Parser.cpp" />
     <ClCompile Include="src\Parsing\Token.cpp" />
@@ -125,12 +126,15 @@
     <ClInclude Include="src\AST\FuncPrototype.h" />
     <ClInclude Include="src\AST\Stmt.h" />
     <ClInclude Include="src\AST\TypeDesc.h" />
+    <ClInclude Include="src\Parsing\ExprElem.h" />
+    <ClInclude Include="src\Parsing\ExprParser.h" />
     <ClInclude Include="src\Parsing\Lexer.h" />
     <ClInclude Include="src\Parsing\Parser.h" />
     <ClInclude Include="src\Parsing\ParseState.h" />
     <ClInclude Include="src\Parsing\Token.h" />
-    <ClInclude Include="src\Parsing\OperDesc.h" />
+    <ClInclude Include="src\Parsing\Operator.h" />
     <ClInclude Include="src\Semantics\SemanticChecker.h" />
+    <ClInclude Include="src\Semantics\SymbolTable.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
