--- a/YoakkeCompiler/YoakkeCompiler.vcxproj
+++ b/YoakkeCompiler/YoakkeCompiler.vcxproj
@@ -120,13 +120,15 @@
     <ClCompile Include="src\Parsing\Parser.cpp" />
     <ClCompile Include="src\Parsing\Token.cpp" />
     <ClCompile Include="src\Semantics\ConstantEvaluator.cpp" />
+    <ClCompile Include="src\Semantics\ConstantSymbol.cpp" />
     <ClCompile Include="src\Semantics\Declarator.cpp" />
-    <ClCompile Include="src\Semantics\FunctionSymbol.cpp" />
     <ClCompile Include="src\Semantics\Scope.cpp" />
     <ClCompile Include="src\Semantics\SemanticChecker.cpp" />
     <ClCompile Include="src\Semantics\Symbol.cpp" />
     <ClCompile Include="src\Semantics\SymbolTable.cpp" />
+    <ClCompile Include="src\Semantics\TypedSymbol.cpp" />
     <ClCompile Include="src\Semantics\TypeSymbol.cpp" />
+    <ClCompile Include="src\Semantics\VarSymbol.cpp" />
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\AST\Expr.h" />
@@ -141,13 +143,15 @@
     <ClInclude Include="src\Parsing\Token.h" />
     <ClInclude Include="src\Parsing\Operator.h" />
     <ClInclude Include="src\Semantics\ConstantEvaluator.h" />
+    <ClInclude Include="src\Semantics\ConstantSymbol.h" />
     <ClInclude Include="src\Semantics\Declarator.h" />
-    <ClInclude Include="src\Semantics\FunctionSymbol.h" />
     <ClInclude Include="src\Semantics\Scope.h" />
     <ClInclude Include="src\Semantics\SemanticChecker.h" />
     <ClInclude Include="src\Semantics\SymbolTable.h" />
     <ClInclude Include="src\Semantics\Symbol.h" />
+    <ClInclude Include="src\Semantics\TypedSymbol.h" />
     <ClInclude Include="src\Semantics\TypeSymbol.h" />
+    <ClInclude Include="src\Semantics\VarSymbol.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
